@@ -1,3 +1,9 @@
+2010-04-30  Anders Carlsson  <andersca@apple.com>
+
+        Fix build.
+
+        * bridge/npapi.h:
+
 2010-04-30  Jian Li  <jianli@chromium.org>
 
         Reviewed by Darin Fisher.
